<resources>
    <string name="app_name">CardGame</string>
    <string name="dealer_hand">Dealers Hand</string>
    <string name="start_button">START GAME</string>
    <string name="players_hand">Players Hand</string>
    <string name="button_hit">Hit</string>
    <string name="button_stand">Stand</string>
    <string name="button_newGame">New Bet</string>
    <string name="dealer_points">Dealers points: %1$s</string>
    <string name="player_points">%1$s points:\n%2$s</string>
    <string name="dealer_wins">Dealer wins</string>
    <string name="player_wins">Player wins</string>
    <string name="password">Password</string>
    <string name="draw_wins">It´s a draw</string>
    <string name="game_over">Game Over in: </string>
    <string name="you_bust">You Bust</string>
    <string name="Name">Name</string>
    <string name="Cash">Cash</string>
    <string name="Split">Split</string>
    <string name="Bet">Bet</string>
    <string name="Fill_in_cash">You need to put in cash in order to play</string>
    <string name="user_already_exists">User already exists</string>
    <string name="logout">Logout</string>
    <string name="high_score">High Score</string>


</resources>