<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/game_background"
    tools:context=".BlackJackActivity">

    <ImageView
        android:id="@+id/dealer1"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:layout_marginStart="40dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.163"
        app:srcCompat="@drawable/c12" />

    <ImageView
        android:id="@+id/dealer2"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:layout_marginStart="40dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/dealer1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.175"
        app:srcCompat="@drawable/c12" />

    <ImageView
        android:id="@+id/dealer3"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:layout_marginStart="12dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dealer1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.193"
        app:srcCompat="@drawable/c12" />

    <ImageView
        android:id="@+id/dealer4"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:layout_marginEnd="20dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toEndOf="@+id/dealer2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.211"
        app:srcCompat="@drawable/c12" />

    <ImageView
        android:id="@+id/dealer5"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:layout_marginEnd="20dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toEndOf="@+id/dealer3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.235"
        app:srcCompat="@drawable/c12" />

    <ImageView
        android:id="@+id/dealer6"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:layout_marginEnd="20dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/dealer4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.271"
        app:srcCompat="@drawable/c12" />

    <ImageView
        android:id="@+id/player1"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:layout_marginStart="40dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.468"
        app:srcCompat="@drawable/c12" />

    <ImageView
        android:id="@+id/player2"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:layout_marginStart="40dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/player1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.479"
        app:srcCompat="@drawable/c12" />

    <ImageView
        android:id="@+id/player3"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/player1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        app:srcCompat="@drawable/c12" />


    <ImageView
        android:id="@+id/player4"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.279"
        app:layout_constraintStart_toEndOf="@+id/player1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.528"
        app:srcCompat="@drawable/c12" />

    <ImageView
        android:id="@+id/player5"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/player3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.541"
        app:srcCompat="@drawable/c12" />

    <ImageView
        android:id="@+id/player6"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toEndOf="@+id/player4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.566"
        app:srcCompat="@drawable/c12" />

    <TextView
        android:id="@+id/dealertextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="25dp"
        android:text="@string/dealer_hand"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/dealer2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/playertextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/players_hand"
        android:textColor="#FFF"
        android:textColorHighlight="#434141"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player5" />

    <Button
        android:id="@+id/hitButton"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#0AD127"
        android:text="@string/button_hit"
        app:layout_constraintEnd_toStartOf="@+id/standButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <Button
        android:id="@+id/standButton"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#CD2F2F"
        android:text="@string/button_stand"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <Button
        android:id="@+id/playAgainButton"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#2355B8"
        android:text="@string/button_newGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/standButton"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <TextView
        android:id="@+id/playerScoretextView"
        android:layout_width="93dp"
        android:layout_height="47dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/player_points"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/dealersHandValue"
        android:layout_width="81dp"
        android:layout_height="56dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/splitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Split"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/standButton" />

    <TextView
        android:id="@+id/playersHandValue"
        android:layout_width="69dp"
        android:layout_height="55dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="177dp"
        android:layout_height="21dp"
        android:layout_marginEnd="104dp"
        android:min="1"
        android:max="100"
        android:progress="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playertextView" />

    <TextView
        android:id="@+id/betTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bet:"
        app:layout_constraintEnd_toStartOf="@+id/seekBar"
        app:layout_constraintTop_toBottomOf="@+id/playertextView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="341dp"
        android:layout_height="132dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>